st instead of urxvt

--- a/README.org
+++ b/README.org
@@ -6,7 +6,7 @@
   [[https://github.com/xxzozaxx/dotfile/blob/master/Pictures/2018-07-20_11:32:15_1600x900.png]]
 * What programs here:
 - I3wm without gaps
-- urxvt
+- urxvt, NOW I use my fork of st (aka suckless term)
 - Screen (I don't use tmux anymore)
 - Emacs (Spacemacs) :: - Dired layer
 - Vim
