--- a/.spacemacs.d/rssfeed.org
+++ b/.spacemacs.d/rssfeed.org
@@ -15,9 +15,13 @@
 ** https://www.youtube.com/feeds/videos.xml?channel_id=UCd0dc7kQA1FUpJ76o1EjLqQ
 ** https://www.youtube.com/feeds/videos.xml?channel_id=UConVfxXodg78Tzh5nNu85Ew
 * Blog                                                               :elfeed:
-** https://lukesmith.xyz/rss.xml
+** https://lukesmith.xyz/rss.xml                                                     :Luke:
 ** http://blog.z3bra.org/rss/feed.xml
 * News                                                               :elfeed:
 ** https://hnrss.org/newest?points=10
 ** https://www.reddit.com/.rss?feed=453180888de169bbde28bf72272be11f6a5322a9&user=XxZozaxX
 ** https://freepo.st/rss/new
+* Vocab                                                              :elfeed:
+** https://wordsmith.org/awad/rss1.xml                                                 :Vocab:
+** https://www.merriam-webster.com/wotd/feed/rss2                                          :Vocab:
+** https://en.wiktionary.org/w/api.php?action=featuredfeed&feed=wotd                             :Vocab:
