--- a/README.org
+++ b/README.org
@@ -1,23 +1,20 @@
-#+TITLE: My Monochrome dotfile (aka My GNHO/linux rice)
+#+TITLE: M-x: Ahmed-dotfile RET
 #+AUTHOR: Ahmed Khaled
 
-* Screenshot
-  #+DATE: Fri Jul 20 17:09:35 EET 2018
-  [[https://github.com/xxzozaxx/dotfile/blob/master/Pictures/2018-07-20_11:32:15_1600x900.png]]
-* What programs here:
-- I3wm without gaps
-- urxvt, NOW I use my fork of st (aka suckless term)
-- Screen (I don't use tmux anymore)
-- Emacs (Spacemacs) :: - Dired layer
-- Vim
-- Bash (TODO )
-- Qutebrowser
-- Ranger
-- rofi
-- zathura
-- misc
-- Compton
-- neofetch
--
+* What programs I use:
+  tl;dr: Emacs and linux
++ ~Bash~  mksh
++ Emacs (Spacemacs)
++ ~I3wm~ dwm
++ ~urxvt~, st
++ ~Screen~ tmux
++ Vim
++ Qutebrowser
++ Ranger
++ ~rofi~ dmenu
++ zathura
++ Compton
++ neofetch
+
 * Feel free to suggest me anything
   you know how to use github, huh.
