--- a/.spacemacs.d/rssfeed.org
+++ b/.spacemacs.d/rssfeed.org
@@ -16,7 +16,10 @@
 ** https://www.youtube.com/feeds/videos.xml?channel_id=UConVfxXodg78Tzh5nNu85Ew
 * Blog                                                               :elfeed:
 ** https://lukesmith.xyz/rss.xml                                                     :Luke:
-** http://blog.z3bra.org/rss/feed.xml
+** http://blog.z3bra.org/rss/feed.xml                                                  :Z3bra:
+** https://brennan.io/blog/rss.xml                                                    :Brennan:
+** https://venam.nixers.net/blog/feed.xml                                               :Venam:
+** http://endlessparentheses.com/atom.xml                                               :ELP:
 * News                                                               :elfeed:
 ** https://hnrss.org/newest?points=10
 ** https://www.reddit.com/.rss?feed=453180888de169bbde28bf72272be11f6a5322a9&user=XxZozaxX
@@ -24,4 +27,4 @@
 * Vocab                                                              :elfeed:
 ** https://wordsmith.org/awad/rss1.xml                                                 :Vocab:
 ** https://www.merriam-webster.com/wotd/feed/rss2                                          :Vocab:
-** https://en.wiktionary.org/w/api.php?action=featuredfeed&feed=wotd                             :Vocab:
+#** https://en.wiktionary.org/w/api.php?action=featuredfeed&feed=wotd  :Vocab:
