--- a/README.org
+++ b/README.org
@@ -9,7 +9,7 @@
 + +urxvt+  -> st (mainly), xterm
 + +Screen+ -> +tmux+ -> dvtm + abduco
 + Vim
-+ +Qutebrowser+ -> xlinks2 (mainly), surf, elinks (for gopher)
++ +Qutebrowser+ -> xlinks2 (mainly),eww ([E]macs [W]eb bro[w]ser), surf (compile it yourself or excpect hell), elinks (for gopher only)
 + Ranger
 + +rofi+ -> dmenu
 + zathura
