--- a/README.org
+++ b/README.org
@@ -2,19 +2,28 @@
 #+AUTHOR: Ahmed Khaled
 
 * What programs I use:
-  tl;dr: Emacs, suckless and linux (I wish I could run BSD instead)
-+ +Bash+ -> mksh
-+ Emacs (Spacemacs)
+  *tl;dr*: Emacs, suckless and linux (I wish I could run BSD instead) [fn:list]
++ +Bash+ -> mksh, eshell /(Emacs Shell)/
++ Emacs /(Spacemacs)/
+  - Theme: Gruvbox, Dracula
+  - Mail: mu4e
+  - +RSS: elfeed+
++ Vim -> neovim
 + +I3wm+ -> dwm
-+ +urxvt+  -> st (mainly), xterm
++ +urxvt+  -> st /(mainly)/, xterm
 + +Screen+ -> +tmux+ -> dvtm + abduco
-+ Vim
-+ +Qutebrowser+ -> xlinks2 (mainly),eww ([E]macs [W]eb bro[w]ser), surf (compile it yourself or excpect hell), elinks (for gopher only)
++ +Qutebrowser+ -> xlinks2 /(mainly)/,eww /([E]macs [W]eb bro[w]ser)/, surf, elinks /(for gopher only)/
 + Ranger
 + +rofi+ -> dmenu
 + zathura
 + Compton
 + neofetch
++ Fonts:
+  - for Emacs I use GoMono /NerdFont version/
+  - for Termianl I use *DejaVu Sans Mono* /NerdFont version/
+  - for PDF I use GNU *FreeSerif*, or *Modern Computer*
+
+[fn:list] read [[https://github.com/mayfrost/guides][ALTERNATIVES.md]] for more great software to use,
 
 * Feel free to suggest me anything
   you know how to use github, huh.
