--- a/README.org
+++ b/README.org
@@ -2,7 +2,7 @@
 #+AUTHOR: Ahmed Khaled
 
 * What programs I use:
-  *tl;dr*: Emacs, suckless and linux (I wish I could run BSD instead) [fn:list]
+  *tl;dr*: Emacs, suckless and linux (I wish I could run BSD instead) [fn:1]
 + +Bash+ -> mksh, eshell /(Emacs Shell)/
 + Emacs /(Spacemacs)/
   - Theme: Gruvbox, Dracula
@@ -19,11 +19,11 @@
 + Compton
 + neofetch
 + Fonts:
-  - for Emacs I use GoMono /NerdFont version/
+  - for Emacs I use *GoMono* /NerdFont version/
   - for Termianl I use *DejaVu Sans Mono* /NerdFont version/
   - for PDF I use GNU *FreeSerif*, or *Modern Computer*
 
-[fn:list] read [[https://github.com/mayfrost/guides][ALTERNATIVES.md]] for more great software to use,
-
 * Feel free to suggest me anything
   you know how to use github, huh.
+
+[fn:1] read [[https://github.com/mayfrost/guides][ALTERNATIVES.md]] for more great software to use,
