--- a/README.org
+++ b/README.org
@@ -2,22 +2,23 @@
 #+AUTHOR: Ahmed Khaled
 
 * What programs I use:
-	*tl;dr:* [Neo]vim, Emacs, suckless[fn:1] and linux (I wish I could run BSD instead)
++programs+ mean I used it before, but no longer use it now.
+	*tl;dr:* Debian, [Neo]vim, Emacs, suckless[fn:1] and linux (I wish I could run OpenBSD instead)
 		+ *Email client:* +s-nail, neatmail(a simple INBOX parsing)+fdm+, Mu4e(with offlineimap)_{again}
-		+ *Feeds:* sfeed /RSS, Atom/
+		+ *Feeds:* +sfeed /RSS, Atom/+, elfeed
 		+ *File Browser:* Ranger
 		+ *Multiplexer:* +Screen+ , +tmux+ , +dvtm+
-		+ *Pdf & other document viwer:* zathura, mupdf
-		+ *Shell:* +Bash+ , +eshell+, mksh,
-		+ *Terminal Emulator:* +urxvt+, +xterm+, +konsole+, st
-		+ *Text Editor:* +Vim+ , neovim, Emacs, neatvi_{minimal vi clone with rock bi-direction support}
-		+ *Web Browser:* +Qutebrowser+, +eww+, +elinks /(for gopher only)/+, surf, xlinks2,
+		+ *Pdf & other document viwer:* zathura, mupdf, evince
+		+ *Shell:* +Bash+ , +eshell+, mksh
+		+ *Terminal Emulator:* +urxvt+, +xterm+, +konsole+, st, kitty
+		+ *Text Editor:* +Vim+ , neovim, Emacs, +neatvi_{minimal vi clone with rock bi-direction support}+
+		+ *Web Browser:* +Qutebrowser+, +eww+, +elinks /(for gopher only)/+, surf, xlinks2, firefox
 		+ *Windows Manager:* +I3wm+ , dwm
 		+ +rofi+ , dmenu
 		+ Compton
 		+ keyboard: custom us keyboard based on dead-intl but you know without dead kyes, standard ar keyboard.
 		+ Fonts:
-			- Emacs I use +*Go Mono*+, *Verily Serif Mono*
+			- Emacs I use *Go Mono*, *Verily Serif Mono*, Neep (bitmap), Scientifica (bitmap)
 			- Termianl I use +*DejaVu Sans Mono*+, +*Verily Serif Mono*+, *Luxi Mono*
 			- PDF I use GNU *EB Garamond* _mainly_, *FreeSerif*, or *Modern Computer*
 			- Zathura curie
